# BLXCode

./: .env.release.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SUPPORT.md  Trunk.toml  index.html  skills-lock.json  styles.css
.agents/learnings/: LEARNINGS.md  README.md
.agents/memory/: ARCHITECTURE.md  README.md
.agents/plans/: PLANS.md  agent-chat-maximize.md  agent-image-context.md  agent-image-modus.md  agent-timeline-tree-refactor.md  api-keys-centralized.md  architecture-map-multi-lang.md  auto-update-github-releases.md  better-harness.md  code-wiki-architecture-map.md  coordinated-subagents.md  file-browser-rich-preview.md  graph-3d-toolbar-preview.md  kanban-board-view.md  leptos-0.8-upgrade.md  leptos-to-typescript-migration.md  linux-browser-iframe-boot-fix.md  memory-nach-agents.md  per-turn-chat-metrics.md  performance-optimization.md  plan-manager.md  security-hardening.md  sessions-json-file-lock.md  settings-tabs-themes-refactor.md  skills-rules-tabs.md  state-persistence-und-agent-resume.md  terminal-agent-context-handoff.md  terminal-grid-drag-drop.md  v2-roadmap.md  workspace-color-terminal-badge.md  workspace-wizard-und-grid.md
.agents/rules/: index.json  rule-no-monolith-structure.md  rule-reusable-components.md  rule-theme-tokens.md
.agents/skills/: index.json
.blxcode/tasks/: index.json
.cargo/: config.toml
.cursor/plans/: agent-pane_provider_tools_a884d40b.plan.md  terminal_dnd_eb-parität_504b8f7f.plan.md
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml  q-and-a.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pr-check.yml  release.yml  wiki-sync.yml
.playwright-cli/: page-2026-05-28T00-49-01-652Z.yml
content/eula/: de-DE.md  en-US.md  es-ES.md  fr-FR.md  hu-HU.md  it-IT.md  ja-JP.md  ko-KR.md  pl-PL.md  pt-BR.md  ru-RU.md  zh-CN.md  zh-TW.md
content/hooks/: blxcode_notify.py  claude_notify.py  claude_session_capture.py  claude_title.py  codex_notify.py  codex_session_capture.py  codex_title.py  cursor_notify.py  cursor_session_capture.py  cursor_title.py  gemini_notify.py  gemini_session_capture.py  gemini_title.py  opencode_blxcode.ts
docs/: README.md  THEME_EXCEPTIONS.md
docs/developer/: agent-harness.md  architecture.md  contributing.md  i18n.md  setup.md  subagents.md  tauri-ipc.md  themes.md  voice.md
docs/releases/: v0.2.9.md  v0.3.0.md  v0.3.1.md  v0.3.2.md
docs/user/: agent-harness.md  agent-providers.md  appearance-themes.md  building.md  file-preview.md  getting-started.md  image.md  keyboard-shortcuts.md  language.md  memory-and-tasks.md  plans.md  rules-and-skills.md  settings.md  subagents.md  troubleshooting.md  voice.md  workspaces.md
frontend-js/: build.mjs  graph3d_entry.mjs  package-lock.json  package.json
frontend-js/scripts/: tauri-before-build.cjs
public/: terminal_bootstrap.mjs
scripts/: generate-app-icons.sh  lint_theme_tokens.sh  release-macos.sh  release-windows.cmd  release-windows.ps1  release.cmd  release.ps1  release.sh  render_i18n_locales_from_en.py  sync_github_wiki.py  sync_github_wiki.sh  tauri-before-build.cjs  tokenize_styles_css.py
scripts/ci/: ensure-vbscript.cmd
scripts/release/: build.ps1  build.sh  changelog.ps1  changelog.sh  changelog_finalize.py  common.ps1  common.sh  linux_targets.ps1  linux_targets.sh  merge_latest_json.py  upload.ps1  upload.sh  version.ps1  version.sh
scripts/setup/: setup-linux.sh  setup-macos.sh  setup-windows.ps1
scripts/tools/: render_i18n_locales_from_en.py
src/: agent_wire.rs  app.rs  boot_loading.rs  main.rs  memory_paths.rs  open_http.rs  quit.rs  skills_rules_wire.rs  tauri_bridge.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_hooks.rs  agent_settings.rs  agents_layout.rs  api_keys.rs  app_paths.rs  browser_host.rs  clipboard.rs  commands.rs  fs_entries.rs  git_commit_ai.rs  git_graph.rs  git_info.rs  git_status.rs  git_sync.rs  gitignore.rs  lib.rs  main.rs  media_keys.rs  memory.rs  plans.rs  plans_index.rs  proc.rs  pty_host.rs  ssh_remotes.rs  ssh_secrets.rs  tasks.rs  updater.rs  workbench_state.rs
src-tauri/src/agent/: anthropic.rs  environment.rs  git_agent.rs  mod.rs  oneshot.rs  openrouter.rs  orchestrator.rs  pricing.rs  project_docs.rs  protocol.rs  provider.rs  session_orchestrator.rs  shell_exec.rs  state.rs  subagent_prompts.rs  subagent_runner.rs  subagents.rs  system_prompt.rs  tool_dispatch.rs  tool_groups.rs  tools.rs  tools_extra.rs  web_commands.rs  web_settings.rs  web_tools.rs  workspace_agent.rs
src-tauri/src/agent/harness_skills/: environment.md  file-access.md  git.md  harness.md  memory-architecture.md  memory.md  plans.md  rules-skills.md  shell.md  subagents.md  tasks.md  web.md
src-tauri/src/image/: commands.rs  generate.rs  mod.rs  settings.rs
src-tauri/src/memory/: frontmatter.rs  graph.rs  mod.rs  paths.rs  store.rs  types.rs  wikilinks.rs
src-tauri/src/memory/architecture/: common.rs  detect.rs  mod.rs  state.rs  static_index.rs  unit.rs
src-tauri/src/memory/architecture/indexers/: cmake.rs  generic.rs  go.rs  jai.rs  make.rs  mod.rs  node.rs  python.rs  rust.rs  zig.rs
src-tauri/src/pointers/: mod.rs
src-tauri/src/skills_rules/: commands.rs  install.rs  mod.rs  pointers.rs  store.rs  types.rs
src-tauri/src/voice/: commands.rs  mod.rs  recorder.rs  settings.rs  stt.rs  tts.rs  voices.rs
src/auth/: login_modal.rs  mod.rs
src/config/: app.config.rs  mod.rs
src/i18n/: eula.rs  keys.rs  locale.rs  mod.rs  resolve.rs
src/service/: mod.rs  service.api.rs  service.i18n.rs
src/theme/: catalog.rs  i18n.rs  mod.rs
src/workbench/: agent_accent.rs  agent_context_handoff.rs  agent_panel.rs  agent_timeline.rs  app_prefs.rs  browser_tab.rs  chat_markdown.rs  create_workspace_wizard.rs  git_sync_controls.rs  harness_chords.rs  harness_ui.rs  memory_panel.rs  mod.rs  notification_sound.rs  path_nav.rs  pointer_agents.rs  post_update_notes.rs  right_panel.rs  (+14 more)
themes/: tokens.css
(+99 files in other folders)
