[package]
name = "blxcode-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1.7"
gloo-net = "0.6"
thiserror = "2"
base64 = { version = "0.22", default-features = false, features = ["std"] }
pulldown-cmark = "0.12"
leptos_icons = "0.5"
icondata = { version = "0.5", default-features = false, features = ["lucide"] }
web-sys = { version = "0.3", features = [
    "CssStyleDeclaration",
    "DomRect",
    "Element",
    "EventTarget",
    "KeyboardEvent",
    "HtmlButtonElement",
    "HtmlDivElement",
    "HtmlInputElement",
    "HtmlIFrameElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "MouseEvent",
    "Navigator",
    "Clipboard",
    "RequestCredentials",
    "Storage",
    "Window",
    "Document",
    "Event",
    "CustomEvent",
    "KeyboardEvent",
] }

[workspace]
members = ["src-tauri"]
