[package]
name = "blxcode-ui"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1.7"
base64 = { version = "0.22", default-features = false, features = ["std"] }
pulldown-cmark = "0.12"
leptos_icons = "0.5"
send_wrapper = "0.6"
icondata = { version = "0.5", default-features = false, features = ["lucide"] }
web-sys = { version = "0.3", features = [
    "DataTransfer",
    "DragEvent",
    "CssStyleDeclaration",
    "DomRect",
    "Element",
    "EventTarget",
    "HtmlElement",
    "KeyboardEvent",
    "HtmlButtonElement",
    "HtmlDivElement",
    "HtmlInputElement",
    "HtmlIFrameElement",
    "NodeList",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "MouseEvent",
    "Navigator",
    "Clipboard",
    "Storage",
    "Window",
    "Document",
    "Event",
    "CustomEvent",
    "KeyboardEvent",
] }

[workspace]
members = ["src-tauri"]
