[package]
name = "blxcode-ui"
version = "0.3.2"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
gloo-timers = { version = "0.4", features = ["futures"] }
console_error_panic_hook = "0.1.7"
base64 = { version = "0.22", default-features = false, features = ["std"] }
pulldown-cmark = "0.13"
leptos_icons = "0.7"
send_wrapper = "0.6"
icondata = { version = "0.7", default-features = false, features = ["lucide"] }
uuid = { version = "1", features = ["v4", "js"] }
web-sys = { version = "0.3", features = [
    "DataTransfer",
    "DragEvent",
    "CssStyleDeclaration",
    "DomRect",
    "Element",
    "EventTarget",
    "HtmlElement",
    "KeyboardEvent",
    "HtmlButtonElement",
    "HtmlDivElement",
    "HtmlInputElement",
    "HtmlIFrameElement",
    "NodeList",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "MouseEvent",
    "Navigator",
    "Clipboard",
    "ClipboardEvent",
    "Storage",
    "Window",
    "Document",
    "Event",
    "CustomEvent",
    "KeyboardEvent",
    "HtmlAudioElement",
    "HtmlMediaElement",
    "Blob",
    "BlobPropertyBag",
    "DataTransferItem",
    "DataTransferItemList",
    "File",
    "FileList",
    "FileReader",
    "Node",
    "ProgressEvent",
    "Url",
    "Performance",
] }

[workspace]
members = ["src-tauri"]

# Faster dev rebuilds: full debug info isn't needed for the WASM frontend, and
# halves rustc link time on cold builds (Tauri's devUrl has a 180s timeout that
# the default `debug = 2` would otherwise blow past on first compile).
[profile.dev]
debug = 1
incremental = true
codegen-units = 256
