[package]
name = "blxcode"
version = "0.2.6"
description = "Local-first desktop workbench for AI coding agents, terminals, memory, tasks, and an embedded browser."
authors = ["BLXCode contributors"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "blxcode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "rustls-native-certs", "json", "stream", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "macros", "time", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = { version = "0.3", default-features = false }
url = "2"
portable-pty = { version = "0.9.0", default-features = false }
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
keyring = "4"
keyring-core = "1"
cpal = "0.17"
hound = "3.5"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
